<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:text="@string/cuenta"
        android:paddingLeft="80px"
        android:textColor="@color/white"
        android:background="#000"
        />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:layout_marginHorizontal="30px"
        android:layout_marginTop="50px"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:layout_marginHorizontal="30px"
        />

    <Button
        android:id="@+id/boton_crear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        android:layout_margin="30px"
        />



</LinearLayout>
